--- a/index.html
+++ b/index.html
@@ -22,52 +22,8 @@
     <!-- Hero and Header -->
 
     <section>
-      <div class="container hero">
-        <div class="hero-bg">
-          <div class="hero-content">
-            <p class="uppertitle-light">A hair salon for men in Kyiv</p>
-            <h1 class="hero-title">BarberShop</h1>
-            <p class="hero-subtitle">
-              We are experts in trendy men’s haircuts.<br />
-              We work quickly, carefully and with style.
-            </p>
-          </div>
-          <ul class="slider-pagination list">
-            <li class="slider-pagination-item active"></li>
-            <li class="slider-pagination-item"></li>
-            <li class="slider-pagination-item"></li>
-          </ul>
-          <ul class="list slider-buttons">
-            <li class="slider-button__back">
-              <img class="slide-two" src="./images/slider/slider3.jpg" alt="" />
-              <button class="slider-button slider-button__back" type="button">Back</button>
-            </li>
-            <li class="slider-button__forward">
-              <img class="slide-one" src="./images/slider/slider2.jpg" alt="" />
-              <button class="slider-button slider-button__forward" type="button">Forward</button>
-            </li>
-          </ul>
-        </div>
-
-        <header class="header">
-          <div class="media">
-            <ul class="media-links list">
-              <li class="media-links__item">
-                <a
-                  class="link"
-                  href="https://Instagram.com"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >Instagram</a
-                >
-              </li>
-              <li class="media-links__item">
-                <a class="link" href="https://Youtube.com" target="_blank" rel="noopener noreferrer"
-                  >Youtube</a
-                >
-              </li>
-            </ul>
-          </div>
+      <div class="hero-bg">
+        <header class="header">          
           <a class="" href="index.html">
             <svg class="logo">
               <use href="./images/icons.svg#icon-logo"></use>
@@ -134,6 +90,47 @@
             </ul>
           </div>
         </header>
+        <div class="media">
+            <ul class="media-links list">
+              <li class="media-links__item">
+                <a
+                  class="link"
+                  href="https://Instagram.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Instagram</a
+                >
+              </li>
+              <li class="media-links__item">
+                <a class="link" href="https://Youtube.com" target="_blank" rel="noopener noreferrer"
+                  >Youtube</a
+                >
+              </li>
+            </ul>
+          </div>
+        <div class="hero-content">
+          <p class="uppertitle-light">A hair salon for men in Kyiv</p>
+          <h1 class="hero-title">BarberShop</h1>
+          <p class="hero-subtitle">
+            We are experts in trendy men’s haircuts.<br />
+            We work quickly, carefully and with style.
+          </p>
+        </div>
+        <ul class="slider-pagination list">
+          <li class="slider-pagination-item active"></li>
+          <li class="slider-pagination-item"></li>
+          <li class="slider-pagination-item"></li>
+        </ul>
+        <ul class="list slider-buttons">
+          <li class="slider-button__back">
+            <!-- <img class="slide-two" src="./images/slider/slider3.jpg" alt="" /> -->
+            <button class="slider-button slider-button__back" type="button">Back</button>
+          </li>
+          <li class="slider-button__forward">
+            <!-- <img class="slide-one" src="./images/slider/slider2.jpg" alt="" /> -->
+            <button class="slider-button slider-button__forward" type="button">Forward</button>
+          </li>
+        </ul>
       </div>
     </section>
 
@@ -613,48 +610,48 @@
             <button class="btn-light__booking" type="button">send</button>
           </div>
         </div>
-          <div class="contacts-bg">
-            <div class="contacts section">
-              <h2 class="title-light">Contacts</h2>
-              <address class="contacts-adress">
-                <ul class="contacts-list">
-                  <li class="contacts-list__item">
-                    <a
-                      class="contacts-list__link"
-                      href="https://goo.gl/maps/r24npt5XV5TZUg2dA"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                    >
-                      <svg class="contacts-list__icon">
-                        <use href="./images/icons.svg#icon-map-pin"></use>
-                      </svg>
-                      st. Vasilkovaya, <br class="contacts-list__link-transfer" />7A Kiev, 08132
-                    </a>
-                  </li>
-                  <li class="contacts-list__item">
-                    <a class="contacts-list__link" href="barbershop@email.com">
-                      <svg class="contacts-list__icon">
-                        <use href="./images/icons.svg#icon-mail-footer"></use>
-                      </svg>
-                      barbershop@email.com
-                    </a>
-                  </li>
-                  <li class="contacts-list__item">
-                    <a class="contacts-list__link" href="tel:+380961111111">
-                      <svg class="contacts-list__icon">
-                        <use href="./images/icons.svg#icon-phone-footer"></use>
-                      </svg>
-                      +38 096 111 11 11
-                    </a>
-                  </li>
-                </ul>
-              </address>
-              <p class="contacts__hours-title">working hours</p>
-              <p class="contacts__hours-time">
-                Every day from <time>09:00</time> to <time>22:00</time>
-              </p>
-            </div>
-          </div>        
+        <div class="contacts-bg">
+          <div class="contacts section">
+            <h2 class="title-light">Contacts</h2>
+            <address class="contacts-adress">
+              <ul class="contacts-list">
+                <li class="contacts-list__item">
+                  <a
+                    class="contacts-list__link"
+                    href="https://goo.gl/maps/r24npt5XV5TZUg2dA"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg class="contacts-list__icon">
+                      <use href="./images/icons.svg#icon-map-pin"></use>
+                    </svg>
+                    st. Vasilkovaya, <br class="contacts-list__link-transfer" />7A Kiev, 08132
+                  </a>
+                </li>
+                <li class="contacts-list__item">
+                  <a class="contacts-list__link" href="barbershop@email.com">
+                    <svg class="contacts-list__icon">
+                      <use href="./images/icons.svg#icon-mail-footer"></use>
+                    </svg>
+                    barbershop@email.com
+                  </a>
+                </li>
+                <li class="contacts-list__item">
+                  <a class="contacts-list__link" href="tel:+380961111111">
+                    <svg class="contacts-list__icon">
+                      <use href="./images/icons.svg#icon-phone-footer"></use>
+                    </svg>
+                    +38 096 111 11 11
+                  </a>
+                </li>
+              </ul>
+            </address>
+            <p class="contacts__hours-title">working hours</p>
+            <p class="contacts__hours-time">
+              Every day from <time>09:00</time> to <time>22:00</time>
+            </p>
+          </div>
+        </div>
       </section>
     </div>
 
