--- a/index.html
+++ b/index.html
@@ -22,13 +22,46 @@
     <!-- Hero and Header -->
 
     <section>
-      <div class="hero-bg">
-        <header class="header">          
-          <a class="" href="index.html">
-            <svg class="logo">
-              <use href="./images/icons.svg#icon-logo"></use>
-            </svg>
-          </a>
+      <div class="media-hero">
+        <div class="media">
+          <ul class="media-links list">
+            <li class="media-links__item">
+              <a class="link" href="https://Instagram.com" target="_blank" rel="noopener noreferrer"
+                >Instagram</a
+              >
+            </li>
+            <li class="media-links__item">
+              <a class="link" href="https://Youtube.com" target="_blank" rel="noopener noreferrer"
+                >Youtube</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="hero-bg">
+          <div class="hero-content">
+            <p class="uppertitle-light">A hair salon for men in Kyiv</p>
+            <h1 class="hero-title">BarberShop</h1>
+            <p class="hero-subtitle">
+              We are experts in trendy men’s haircuts.<br />
+              We work quickly, carefully and with style.
+            </p>
+          </div>
+          <ul class="slider-pagination list">
+            <li class="slider-pagination-item active"></li>
+            <li class="slider-pagination-item"></li>
+            <li class="slider-pagination-item"></li>
+          </ul>
+          <ul class="list slider-buttons">
+            <li class="slider-button__back">
+              <!-- <img class="slide-two" src="./images/slider/slider3.jpg" alt="" /> -->
+              <button class="slider-button slider-button__back" type="button">Back</button>
+            </li>
+            <li class="slider-button__forward">
+              <!-- <img class="slide-one" src="./images/slider/slider2.jpg" alt="" /> -->
+              <button class="slider-button slider-button__forward" type="button">Forward</button>
+            </li>
+          </ul>
+          <header class="header">          
           <nav class="">
             <ul class="header-nav">
               <li class="header-nav__item"><a class="header-link" href="#about">About</a></li>
@@ -39,8 +72,8 @@
               <li class="header-nav__item"><a class="header-link" href="#contacts">Contacts</a></li>
             </ul>
           </nav>
-          <a class="header-link" href="tel:+380441111111">+38 044 111 11 11</a>
-          <button class="btn-light head" type="button" data-modal-open>ONLINE-BOOKING</button>
+          <a class="header-link__phone" href="tel:+380441111111">+38 044 111 11 11</a>
+          <button class="btn-light__header" type="button" data-modal-open>ONLINE-BOOKING</button>
           <button
             class="menu-toggle js-open-menu"
             type="button"
@@ -90,47 +123,13 @@
             </ul>
           </div>
         </header>
-        <div class="media">
-            <ul class="media-links list">
-              <li class="media-links__item">
-                <a
-                  class="link"
-                  href="https://Instagram.com"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >Instagram</a
-                >
-              </li>
-              <li class="media-links__item">
-                <a class="link" href="https://Youtube.com" target="_blank" rel="noopener noreferrer"
-                  >Youtube</a
-                >
-              </li>
-            </ul>
-          </div>
-        <div class="hero-content">
-          <p class="uppertitle-light">A hair salon for men in Kyiv</p>
-          <h1 class="hero-title">BarberShop</h1>
-          <p class="hero-subtitle">
-            We are experts in trendy men’s haircuts.<br />
-            We work quickly, carefully and with style.
-          </p>
         </div>
-        <ul class="slider-pagination list">
-          <li class="slider-pagination-item active"></li>
-          <li class="slider-pagination-item"></li>
-          <li class="slider-pagination-item"></li>
-        </ul>
-        <ul class="list slider-buttons">
-          <li class="slider-button__back">
-            <!-- <img class="slide-two" src="./images/slider/slider3.jpg" alt="" /> -->
-            <button class="slider-button slider-button__back" type="button">Back</button>
-          </li>
-          <li class="slider-button__forward">
-            <!-- <img class="slide-one" src="./images/slider/slider2.jpg" alt="" /> -->
-            <button class="slider-button slider-button__forward" type="button">Forward</button>
-          </li>
-        </ul>
+        <a class="" href="index.html">
+            <svg class="logo">
+              <use href="./images/icons.svg#icon-logo"></use>
+            </svg>
+          </a>
+        
       </div>
     </section>
 
