hero tablet done

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
           <ul class="list slider-buttons">
             <li class="slider-button__back">
               <!-- <img class="slide-two" src="./images/slider/slider3.jpg" alt="" /> -->
-              <button class="slider-button slider-button__back" type="button">Back</button>
+              <button class="slider-button__back" type="button">Back</button>
             </li>
             <li class="slider-button__forward">
               <!-- <img class="slide-one" src="./images/slider/slider2.jpg" alt="" /> -->
-              <button class="slider-button slider-button__forward" type="button">Forward</button>
+              <button class="slider-button__forward" type="button">Forward</button>
             </li>
           </ul>
           <header class="header">          
