--- a/index.html
+++ b/index.html
@@ -61,75 +61,82 @@
               <button class="slider-button__forward" type="button">Forward</button>
             </li>
           </ul>
-          <header class="header">          
-          <nav class="">
-            <ul class="header-nav">
-              <li class="header-nav__item"><a class="header-link" href="#about">About</a></li>
-              <li class="header-nav__item">
-                <a class="header-link" href="#services">Services and prices</a>
-              </li>
-              <li class="header-nav__item"><a class="header-link" href="#barbers">Barbers</a></li>
-              <li class="header-nav__item"><a class="header-link" href="#contacts">Contacts</a></li>
-            </ul>
-          </nav>
-          <a class="header-link__phone" href="tel:+380441111111">+38 044 111 11 11</a>
-          <button class="btn-light__header" type="button" data-modal-open>ONLINE-BOOKING</button>
-          <button
-            class="menu-toggle js-open-menu"
-            type="button"
-            name="menu"
-            aria-expanded="false"
-            aria-controls="mobile-menu"
-          >
-            <svg width="40px" height="40px" aria-label="Перемикач мобільного меню">
-              <use class="menu-toggle__icon" href="./images/icons.svg#icon-menu"></use>
-            </svg>
-          </button>
-          <div class="menu-container js-menu-container" id="mobile-menu">
-            <button class="menu-toggle js-close-menu" type="button" name="menu">
+          <header class="header">
+            <nav class="">
+              <ul class="header-nav">
+                <li class="header-nav__item"><a class="header-link" href="#about">About</a></li>
+                <li class="header-nav__item">
+                  <a class="header-link" href="#services">Services and prices</a>
+                </li>
+                <li class="header-nav__item"><a class="header-link" href="#barbers">Barbers</a></li>
+                <li class="header-nav__item">
+                  <a class="header-link" href="#contacts">Contacts</a>
+                </li>
+              </ul>
+            </nav>
+            <a class="header-link__phone" href="tel:+380441111111">+38 044 111 11 11</a>
+            <button class="btn-light__header" type="button" data-modal-open>ONLINE-BOOKING</button>
+            <button
+              class="menu-toggle js-open-menu"
+              type="button"
+              name="menu"
+              aria-expanded="false"
+              aria-controls="mobile-menu"
+            >
               <svg width="40px" height="40px" aria-label="Перемикач мобільного меню">
-                <use class="menu-toggle__cross" href="./images/icons.svg#icon-cross"></use>
+                <use class="menu-toggle__icon" href="./images/icons.svg#icon-menu"></use>
               </svg>
             </button>
-            <ul class="mobile-nav">
-              <li class="mobile-nav__item"><a class="mobile-nav__link" href="#about">About</a></li>
-              <li class="mobile-nav__item">
-                <a class="mobile-nav__link" href="#services">Services and prices</a>
-              </li>
-              <li class="mobile-nav__item">
-                <a class="mobile-nav__link" href="#barbers">Barbers</a>
-              </li>
-              <li class="mobile-nav__item">
-                <a class="mobile-nav__link" href="#contacts">Contacts</a>
-              </li>
-            </ul>
-            <a class="mobile-nav__link" href="tel:+380441111111">+38 044 111 11 11</a>
-            <button class="btn-dark__mobile" type="button">ONLINE-BOOKING</button>
-            <ul class="mobile-link">
-              <li class="mobile-link__instagram">
-                <a
-                  class="link"
-                  href="https://Instagram.com"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >Instagram</a
-                >
-              </li>
-              <li class="mobile-link__youtube">
-                <a class="link" href="https://Youtube.com" target="_blank" rel="noopener noreferrer"
-                  >Youtube</a
-                >
-              </li>
-            </ul>
-          </div>
-        </header>
+            <div class="menu-container js-menu-container" id="mobile-menu">
+              <button class="menu-toggle js-close-menu" type="button" name="menu">
+                <svg width="40px" height="40px" aria-label="Перемикач мобільного меню">
+                  <use class="menu-toggle__cross" href="./images/icons.svg#icon-cross"></use>
+                </svg>
+              </button>
+              <ul class="mobile-nav">
+                <li class="mobile-nav__item">
+                  <a class="mobile-nav__link" href="#about">About</a>
+                </li>
+                <li class="mobile-nav__item">
+                  <a class="mobile-nav__link" href="#services">Services and prices</a>
+                </li>
+                <li class="mobile-nav__item">
+                  <a class="mobile-nav__link" href="#barbers">Barbers</a>
+                </li>
+                <li class="mobile-nav__item">
+                  <a class="mobile-nav__link" href="#contacts">Contacts</a>
+                </li>
+              </ul>
+              <a class="mobile-nav__link" href="tel:+380441111111">+38 044 111 11 11</a>
+              <button class="btn-dark__mobile" type="button">ONLINE-BOOKING</button>
+              <ul class="mobile-link">
+                <li class="mobile-link__instagram">
+                  <a
+                    class="link"
+                    href="https://Instagram.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Instagram</a
+                  >
+                </li>
+                <li class="mobile-link__youtube">
+                  <a
+                    class="link"
+                    href="https://Youtube.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Youtube</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </header>
         </div>
         <a class="" href="index.html">
-            <svg class="logo">
-              <use href="./images/icons.svg#icon-logo"></use>
-            </svg>
-          </a>
-        
+          <svg class="logo">
+            <use href="./images/icons.svg#icon-logo"></use>
+          </svg>
+        </a>
       </div>
     </section>
 
