--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </ul>
             </nav>
             <a class="header-link__phone" href="tel:+380441111111">+38 044 111 11 11</a>
-            <button class="btn-light__header" type="button" data-modal-open>ONLINE-BOOKING</button>
+            <button class="btn-light__header" type="button">ONLINE-BOOKING</button>
             <button
               class="menu-toggle js-open-menu"
               type="button"
@@ -186,7 +186,7 @@
             a team that is always "on the same wave" with clients. Therefore, we are always ready to
             improve everyone who comes to us!
           </p>
-          <button class="btn" type="button">ONLINE-BOOKING</button>
+          <button class="btn" type="button" data-modal-open>ONLINE-BOOKING</button>
         </div>
       </div>
     </section>
