--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </ul>
             </nav>
             <a class="header-link__phone" href="tel:+380441111111">+38 044 111 11 11</a>
-            <button class="btn-light__header" type="button">ONLINE-BOOKING</button>
+            <button class="btn-light__header" data-modal-open type="button">ONLINE-BOOKING</button>
             <button
               class="menu-toggle js-open-menu"
               type="button"
@@ -108,7 +108,7 @@
                 </li>
               </ul>
               <a class="mobile-nav__link" href="tel:+380441111111">+38 044 111 11 11</a>
-              <button class="btn-dark__mobile" type="button">ONLINE-BOOKING</button>
+              <button class="btn-dark__mobile" data-modal-open type="button">ONLINE-BOOKING</button>
               <ul class="mobile-link">
                 <li class="mobile-link__instagram">
                   <a
@@ -262,7 +262,7 @@
               </li>
             </ul>
           </div>
-          <button class="services-button btn-light" type="button">ONLINE-BOOKING</button>
+          <button class="services-button btn-light" data-modal-open type="button">ONLINE-BOOKING</button>
         </div>
       </section>
     </div>
